Init: my first page
added profile page and coloursss

--- a/index.html
+++ b/index.html
@@ -5,11 +5,20 @@
 		<meta name="description" content="Our first page">
 		<meta name="keywords" content="html tutorial template">
 		<link rel="stylesheet" href="styles/main.css">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;800&display=swap" rel="stylesheet">
 	</head>
 	<body>
 		<div class="container" id="main">
 			<div class="container" id="profile">
-				<img id="profile-pic" src="https://img.freepik.com/premium-vector/cartoon-doodle-black-cat-drawing-simple-cute-kitten-silhouette-halloween-vector-illustration_217204-802.jpg?w=2000" />
+				<img id="profile-pic" src="https://images.saymedia-content.com/.image/t_share/MTk2NzY3MjA5ODc0MjY5ODI2/top-10-cutest-cat-photos-of-all-time.jpg" />
+			</div>
+			<div class="text-container">
+				<h1>Viv Chong</h1>
+				<div>
+					Paragraph 1
+				</div>
 			</div>
 		</div> 
 	</body> 
