--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Cat's readme page</title>
+		<title>Viv Chong</title>
 		<meta name="description" content="Our first page">
 		<meta name="keywords" content="html tutorial template">
 		<link rel="stylesheet" href="styles/main.css">
